--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Base project for development of markdown-it plugins.",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
