--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha -R spec"
+    "test": "mocha --colors"
   },
   "keywords": [
     "markdown-it",
