--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Base project for development of markdown-it plugins.",
   "main": "index.js",
   "scripts": {
+    "coverage": "nyc mocha",
+    "coverage-report": "nyc mocha && nyc report -r text-lcov | coveralls",
     "lint": "eslint .",
     "test": "mocha --colors"
   },
@@ -21,5 +23,8 @@
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "terser": "^3.17.0"
+  },
+  "dependencies": {
+    "coveralls": "^3.0.3"
   }
 }
