test on node: latest and lts

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
- - '6'
  - node
+ - lts/*
 script: yarn lint && yarn coverage
 sudo: false
 # deploy: run `travis setup npm`
