--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,13 +5,13 @@ env:
 
 rules:
   accessor-pairs:         2
-  array-bracket-spacing:  [ 2, "always", { "singleValue": true, "objectsInArrays": true, "arraysInArrays": true } ]
+  array-bracket-spacing:  2
   block-scoped-var:       2
   block-spacing:          2
-  brace-style:            [ 2, '1tbs', { allowSingleLine: true } ]
+  brace-style:            [ 2, 'stroustrup', { allowSingleLine: true } ]
   # Postponed
   #callback-return:        2
-  comma-dangle:           2
+  comma-dangle:           [ 2, 'always-multiline' ]
   comma-spacing:          2
   comma-style:            2
   computed-property-spacing: [ 2, never ]
